adding portfolio images

--- a/css/styles.css
+++ b/css/styles.css
@@ -10033,13 +10033,13 @@ hr.light {
 
 #mainNav {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  background-color: #fff;
+  background-color: #f4623a;
   transition: background-color 0.2s ease;
 }
 #mainNav .navbar-brand {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
-  color: #f4623a;
+  color: white;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   color: #6c757d;
@@ -10077,10 +10077,10 @@ hr.light {
   }
   #mainNav.navbar-scrolled {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    background-color: #fff;
+    background-color: #f4623a;
   }
   #mainNav.navbar-scrolled .navbar-brand {
-    color: #f4623a;
+    color: white;
   }
   #mainNav.navbar-scrolled .navbar-brand:hover {
     color: #f4623a;
@@ -10163,4 +10163,13 @@ header.masthead h1 {
 
 .text-white-75 {
   color: rgba(255, 255, 255, 0.75);
+}
+
+.visible-sm-only {
+  display: none;
+}
+@media (max-width: 576px) {
+  .visible-sm-only {
+    display: inline-block;
+  }
 }
