--- a/css/styles.css
+++ b/css/styles.css
@@ -10172,6 +10172,10 @@ header.masthead h1 {
   display: inline-block;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 @media (min-width: 576px) {
   .visible-sm-only {
     display: none;
